<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:hint="@string/enter_contact_number"
        android:id="@+id/tilContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:padding="@dimen/mini_padding" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/mini_padding"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_contacts_black_24dp"
                android:id="@+id/ivChoose"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_below="@+id/etContacts"
                android:background="@color/divider_color" />
        </RelativeLayout>

    </android.support.design.widget.TextInputLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_below="@+id/tilContacts"
        android:layout_height="match_parent"
        android:padding="@dimen/default_margin"
        android:hint="@string/type_your_message"
        android:layout_above="@+id/bottomDivider"
        android:gravity="start"
        android:id="@+id/etMessage"
        tools:text="@string/app_name"
        android:background="@android:color/transparent"/>

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_above="@+id/tvSave"
        android:background="@color/divider_color" />


    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSave"
        android:layout_margin="@dimen/mini_padding"
        android:textColor="@android:color/holo_green_dark"
        android:padding="@dimen/mini_padding"
        android:text="@string/save"/>

    <TextView
        android:layout_below="@+id/etMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mini_padding"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tvSave"
        android:layout_toEndOf="@+id/tvSave"
        android:textColor="@android:color/holo_red_light"
        android:id="@+id/tvCancel"
        android:padding="@dimen/mini_padding"
        android:text="@string/cancel" />

    <TextView
        android:layout_below="@+id/etMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/mini_padding"
        android:layout_toRightOf="@+id/tvCancel"
        android:layout_toEndOf="@+id/tvCancel"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/tvClear"
        android:padding="@dimen/mini_padding"
        android:text="@string/clear" />

</RelativeLayout>