<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:layout_marginTop="@dimen/mini_padding"
    android:layout_marginLeft="@dimen/mini_padding"
    android:layout_marginRight="@dimen/mini_padding"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:padding="@dimen/mini_padding"
            android:id="@+id/titleTv"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:padding="@dimen/mini_padding"
            android:id="@+id/contentTv"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@android:color/holo_red_light"
                android:layout_height="wrap_content"
                android:padding="@dimen/micro_padding"
                android:src="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/delete"
                android:id="@+id/ivDelete" />

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@android:color/holo_green_light"
                android:layout_height="wrap_content"
                android:padding="@dimen/micro_padding"
                android:src="@android:drawable/ic_menu_send"
                android:contentDescription="@string/send"
                android:id="@+id/ivSend" />



        </LinearLayout>



    </LinearLayout>




</android.support.v7.widget.CardView>